force-app/main/default/objects/ReceivedWaypointGroupEvent__e/ReceivedWaypointGroupEvent__e.object-meta.xml
<CustomObject>
    <label>Received Waypoint Group Event</label>
    <pluralLabel>Received Waypoint GroupEvent</pluralLabel>
</CustomObject>