force-app/main/default/objects/ReceivedWaypointGroupEvent__e/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <label>Group Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>