force-app/main/default/objects/ReceivedWaypointGroupEvent__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>